<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="find_house">Find a house in</string>
    <string name="near_you">Near You</string>
    <string name="per_month">/month</string>
    <string name="from_you">km from you</string>
    <string name="calcul_month_payement">Calculating your monthly mortgage payments</string>
    <string name="amount_loan">Amount of your loan : </string>
    <string name="duration_loan">Duration of your loan : </string>
    <string name="interest_rate">Interest rates :</string>
    <string name="amount_contribution">amount of the contribution :</string>
    <string name="montly_paement">Your monthly payment will be</string>
    <string name="check_availabilities">Check Availability</string>
    <string name="skip">Skip</string>
    <string name="continue_text">Continue</string>
    <string name="type_estate">What is estate type</string>
    <string name="nbr_rooms">"Number of rooms "</string>
    <string name="nbr_bath_rooms">"Number of bathrooms "</string>
    <string name="nbr_bed_rooms">"Number of bedrooms"</string>
    <string name="type_estate_add">apartment, loft, manor</string>
    <string name="what_estate">What estate is it?</string>
    <string name="create_estate">Create a new estate offer</string>
    <string name="detail_estate">detail of the property</string>
    <string name="how_much_rooms">"How much rooms ? "</string>
    <string name="price_and_surface">"What is the cost, with what surface ?"</string>
    <string name="price_estate">1 000 000$</string>
    <string name="area_of_propertie">357 m2</string>
    <string name="desc_estate">What you can tell?</string>
    <string name="cancel">Cancel</string>
    <string name="desc_estate_exemple">This partially furnished modern...</string>
    <string name="take_picture">Take a few picture</string>
    <string name="los_angeles">Los Angeles,CA</string>
    <string name="what_estate_address">what is address ?</string>
    <string name="is_on_sell">Is it for sale?</string>
    <string name="sold">Sold</string>
    <string name="sell">Sell</string>
    <string name="agent_add_estate">what agent add this property?</string>
    <string name="work">close to work</string>
    <string name="school">close to school</string>
    <string name="store">close to store</string>
    <string name="parc">close to parc</string>
    <string name="edit_estate">Edit estate offer</string>
    <string name="surface_range">Surface Range</string>
    <string name="filter">Filter</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="price_range">Price Range</string>
    <string name="proxy">proximity </string>
    <string name="close_to">Close to </string>
    <string name="location">Locaiton</string>
    <string name="monchecourt">Monchecourt, FR</string>
    <string name="publish">Published before</string>
    <string name="date">21/07/2021</string>
    <string name="numberPicture">Minimum number of photos</string>
    <string name="estate_add">You added a new Esate in list</string>
    <string name="estate_add_id">estate_add_id</string>
    <string name="estate_add_desc">"Noice !! your estate has been created "</string>
    <string name="reset">Reset</string>
    <string name="media">Media</string>
    <string name="desc">description</string>
    <string name="surface">Surface</string>
    <string name="address">Adresse</string>
</resources>