<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="96dp"
        android:clipToPadding="false"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"
                android:src="@drawable/baseline_keyboard_arrow_down_white_36"
                android:background="@drawable/round_corner_black_10"
                android:rotation="90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:id="@+id/skipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_bold"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/back"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSurface"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"

                app:layout_constraintTop_toBottomOf="@+id/back"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSurface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/surface_range"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium_italic"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/minSurface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:paddingHorizontal="30dp"
                    android:hint="@string/min"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSurface"/>

                <EditText
                    android:id="@+id/maxSurface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:paddingHorizontal="30dp"
                    android:hint="@string/max"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/minSurface"
                    app:layout_constraintTop_toBottomOf="@+id/txtSurface"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPrice"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/clSurface"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium_italic"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/minPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:paddingHorizontal="30dp"
                    android:hint="@string/min"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPrice"/>

                <EditText
                    android:id="@+id/maxPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:paddingHorizontal="30dp"
                    android:hint="@string/max"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/minPrice"
                    app:layout_constraintTop_toBottomOf="@+id/txtPrice"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtProxy"
                android:layout_width="match_parent"
                android:text="@string/proxy"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium_italic"
                app:layout_constraintTop_toBottomOf="@+id/clPrice"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clProxy"
                app:layout_constraintTop_toBottomOf="@+id/txtProxy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/proxyWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/txtWork"
                    app:layout_constraintStart_toEndOf="@+id/proxyWork"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/proxyWork"
                    app:layout_constraintBottom_toBottomOf="@+id/proxyWork"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/proxySchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/proxyWork"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    app:layout_constraintStart_toEndOf="@+id/proxySchool"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/proxySchool"
                    app:layout_constraintBottom_toBottomOf="@+id/proxySchool"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/proxyStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtWork"
                    android:layout_marginStart="20dp"/>

                <TextView
                    app:layout_constraintStart_toEndOf="@+id/proxyStore"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/proxyStore"
                    app:layout_constraintBottom_toBottomOf="@+id/proxyStore"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/proxyParc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/proxyStore"
                    app:layout_constraintStart_toStartOf="@+id/proxyStore"
                    app:layout_constraintEnd_toEndOf="@+id/proxyStore"
                    />

                <TextView
                    app:layout_constraintStart_toEndOf="@+id/proxyParc"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/proxyParc"
                    app:layout_constraintBottom_toBottomOf="@+id/proxyParc"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/parc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:text="@string/location"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium_italic"
                app:layout_constraintTop_toBottomOf="@+id/clProxy"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/locationEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:hint="@string/monchecourt"
                app:layout_constraintTop_toBottomOf="@+id/txtLocation"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/baseline_location_on_black_18"
                app:layout_constraintTop_toTopOf="@+id/locationEdit"
                app:layout_constraintStart_toStartOf="@+id/locationEdit"
                app:layout_constraintBottom_toBottomOf="@+id/locationEdit"/>

            <TextView
                android:id="@+id/txtPublish"
                android:layout_width="match_parent"
                android:text="@string/publish"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium_italic"
                app:layout_constraintTop_toBottomOf="@+id/locationEdit"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/publishEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:hint="@string/date"
                android:inputType="datetime"
                app:layout_constraintTop_toBottomOf="@+id/txtPublish"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_edit_calendar_18"
                app:layout_constraintTop_toTopOf="@+id/publishEdit"
                app:layout_constraintStart_toStartOf="@+id/publishEdit"
                app:layout_constraintBottom_toBottomOf="@+id/publishEdit"/>

            <RadioGroup
                app:layout_constraintTop_toBottomOf="@+id/publishEdit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/radioEstate"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioSell"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell" />

                <RadioButton
                    android:id="@+id/radioSold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sold" />
            </RadioGroup>

            <EditText
                android:id="@+id/inputDateSold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:visibility="gone"
                android:hint="@string/date"
                android:inputType="datetime"
                app:layout_constraintTop_toBottomOf="@+id/radioEstate"
                />

            <TextView
                android:id="@+id/txtPicture"
                android:layout_width="match_parent"
                android:text="@string/numberPicture"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium_italic"
                app:layout_constraintTop_toBottomOf="@+id/inputDateSold"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/nbrPictureEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:hint="5"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/txtPicture"/>

            <com.ocr.realestatektv2.util.component.PrimaryButton
                android:id="@+id/filterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:button_text="@string/continue_text"
                app:layout_constraintTop_toBottomOf="@+id/nbrPictureEdit"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>